--- a/package.json
+++ b/package.json
@@ -14,17 +14,23 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "@gsap/react": "^2.1.2",
     "@prismicio/client": "^7.17.1",
     "@prismicio/next": "^2.0.1",
     "@prismicio/react": "^3.2.0",
     "@tailwindcss/postcss": "^4.0.17",
     "clsx": "^2.1.1",
+    "gsap": "^3.12.7",
     "next": "^15.1.6",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
-    "tailwindcss": "^4.0.17"
+    "sonner": "^2.0.3",
+    "tailwindcss": "^4.0.17",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
